@@ -48,6 +48,8 @@ public class SearchResultMenu extends Paged {
         super(menuUtil);
         menuUtil.setSearchResult(searchResult);
         tags = SupremeTags.getInstance().getTagManager().getTags();
+
+        enableAutoUpdate(true);
     }
 
     @Override
@@ -130,7 +132,7 @@ public class SearchResultMenu extends Paged {
 
                             UserData.setActive(player, tagevent.getTag());
 
-                            super.open();
+                            super.refresh();
                             menuUtil.setIdentifier(tagevent.getTag());
 
                             if (SupremeTags.getInstance().getConfig().getBoolean("settings.gui-messages")) {
@@ -150,7 +152,7 @@ public class SearchResultMenu extends Paged {
                             String defaultTag = SupremeTags.getInstance().getConfig().getString("settings.default-tag");
 
                             UserData.setActive(player, defaultTag);
-                            super.open();
+                            super.refresh();
                             menuUtil.setIdentifier(defaultTag);
 
                             if (SupremeTags.getInstance().getConfig().getBoolean("settings.gui-messages")) {
@@ -177,7 +179,7 @@ public class SearchResultMenu extends Paged {
                             if (tagevent.isCancelled()) return;
 
                             UserData.setActive(player, tagevent.getTag());
-                            super.open();
+                            super.refresh();
                             menuUtil.setIdentifier(tagevent.getTag());
 
                             if (SupremeTags.getInstance().getConfig().getBoolean("settings.gui-messages")) {
@@ -196,7 +198,7 @@ public class SearchResultMenu extends Paged {
                                 String defaultTag = SupremeTags.getInstance().getConfig().getString("settings.default-tag");
 
                                 UserData.setActive(player, defaultTag);
-                                super.open();
+                                super.refresh();
                                 menuUtil.setIdentifier(defaultTag);
 
                                 if (SupremeTags.getInstance().getConfig().getBoolean("settings.gui-messages")) {
@@ -214,7 +216,7 @@ public class SearchResultMenu extends Paged {
                         double cost = t.getEconomy().getAmount();
 
                         // check if they have the right amount of money to buy etc....
-                        if (hasAmount(player, t.getEconomy().getType(), t.getEconomy().getAmount())) {
+                        if (hasAmount(player, t.getEconomy().getType(), t.getEconomy().getAmount(), t.getIdentifier())) {
                             // give them the tag
 
                             TagBuyEvent tagevent = new TagBuyEvent(player, identifier, cost, false);
@@ -222,14 +224,14 @@ public class SearchResultMenu extends Paged {
 
                             if (tagevent.isCancelled()) return;
 
-                            take(player, t.getEconomy().getType(), t.getEconomy().getAmount());
+                            take(player, t.getEconomy().getType(), t.getEconomy().getAmount(), t.getIdentifier());
                             addPerm(player, t.getPermission());
 
                             if (SupremeTags.getInstance().getConfig().getBoolean("settings.gui-messages")) {
                                 msgPlayer(player, unlocked.replaceAll("%identifier%", t.getIdentifier()).replaceAll("%tag%", SupremeTags.getInstance().getTagManager().getTag(identifier).getCurrentTag()));
                             }
 
-                            super.open();
+                            super.refresh();
                         } else {
                             if (SupremeTags.getInstance().getConfig().getBoolean("settings.gui-messages")) {
                                 insufficient = replacePlaceholders(menuUtil.getOwner(), insufficient);
@@ -312,7 +314,7 @@ public class SearchResultMenu extends Paged {
                     }
 
                     UserData.setActive(player, "None");
-                    super.open();
+                    super.refresh();
                     menuUtil.setIdentifier("None");
 
                     if (SupremeTags.getInstance().getConfig().getBoolean("settings.gui-messages")) {
@@ -334,7 +336,7 @@ public class SearchResultMenu extends Paged {
                     }
 
                     UserData.setActive(player, defaultTag);
-                    super.open();
+                    super.refresh();
                     menuUtil.setIdentifier(defaultTag);
 
                     if (SupremeTags.getInstance().getConfig().getBoolean("settings.gui-messages")) {
@@ -346,7 +348,7 @@ public class SearchResultMenu extends Paged {
             if (name.equalsIgnoreCase("back")) {
                 if (page != 0) {
                     page = page - 1;
-                    super.open();
+                    super.refresh();
                 }
             }
 
@@ -354,7 +356,7 @@ public class SearchResultMenu extends Paged {
                 if (tag.size() > maxItems & currentItemsOnPage >= maxItems) {
                     if (!((index + 1) >= tag.size())) {
                         page = page + 1;
-                        super.open();
+                        super.refresh();
                     } else {
                         e.setCancelled(true);
                     }
@@ -576,7 +578,11 @@ public class SearchResultMenu extends Paged {
                         l += effectLines.size() - 1;
                     } else {
                         line = line.replace(identifierPlaceholder, t.getIdentifier());
-                        line = line.replace(tagPlaceholder, t.getTag().get(0));
+                        if (t.getCurrentTag() != null) {
+                            line = line.replace(tagPlaceholder, t.getCurrentTag());
+                        } else {
+                            line = line.replace(tagPlaceholder, t.getTag().getFirst());
+                        }
                         line = line.replace(costFormattedPlaceholder, "$" + formatNumber(t.getEconomy().getAmount()));
                         line = line.replace(costFormattedPlaceholderRaw, formatNumber(t.getEconomy().getAmount()));
                         line = line.replace(costPlaceholder, String.valueOf(t.getEconomy().getAmount()));
@@ -592,24 +598,32 @@ public class SearchResultMenu extends Paged {
                     }
                 }
 
-
                 tagMeta.setLore(color(lore));
                 nbt.getItem().setItemMeta(tagMeta);
                 nbt.setString("identifier", t.getIdentifier());
 
-                if (guis.getBoolean("gui.tag-menu.slots-tag.enable")) {
-                    if (currentItemsOnPage < slots.size()) {
-                        try {
-                            int slot = Integer.parseInt(slots.get(currentItemsOnPage));
-                            inventory.setItem(slot, nbt.getItem());
-                        } catch (NumberFormatException e) {
-                            inventory.addItem(nbt.getItem());
-                        }
-                    } else {
-                        inventory.addItem(nbt.getItem());
+                int placementSlot;
+
+                boolean useDefinedSlots = guis.getBoolean("gui.tag-menu.slots-tag.enable");
+
+                if (useDefinedSlots && currentItemsOnPage < slots.size()) {
+                    String rawSlot = slots.get(currentItemsOnPage);
+                    try {
+                        placementSlot = Integer.parseInt(rawSlot);
+                    } catch (NumberFormatException e) {
+                        placementSlot = inventory.firstEmpty();
                     }
+                } else if (useDefinedSlots) {
+                    placementSlot = inventory.firstEmpty();
                 } else {
-                    inventory.addItem(nbt.getItem());
+                    placementSlot = inventory.firstEmpty();
+                }
+
+                if (placementSlot != -1) {
+                    inventory.setItem(placementSlot, nbt.getItem());
+                    if (t.isAnimated()) {
+                        animatedSlots.add(placementSlot);
+                    }
                 }
 
                 currentItemsOnPage++;
